chore: creating skeleton to avoid layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@
     background: linear-gradient(to right, #111, 60%, #000);
   }
   .popular .header {
-    @apply mt-4 px-5 md:px-10 flex items-center justify-between;
+    @apply mt-4 px-5 py-3 md:px-10 flex items-center justify-between;
   }
   .popular .header h1 {
     @apply sm:text-xl md:text-2xl;
@@ -59,13 +59,13 @@
     @apply text-xs md:text-base text-[#777] opacity-95 hover:text-[#40c1ad];
   }
   .popular .content {
-    @apply overflow-x-auto px-5 md:px-10;
+    @apply flex gap-2 w-max p-2 px-10 md:px-10;
   }
-  .popular .content ul {
-    @apply flex my-5 justify-between flex-shrink-0 gap-2;
+  .popular .content a {
+    @apply flex-1 pb-2 w-40 md:w-60;
   }
   .popular .media-item {
-    @apply block p-0.5 sm:p-1 aspect-[10/16]  bg-gray-800 hover:scale-105;
+    @apply block p-0.5 sm:p-1 aspect-[10/16]  bg-[#202124] hover:scale-105;
     transition: transform 0.4s ease;
   }
   .popular .content img {
